# tauri-video-cut

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.ts
scripts/: 1-setup-env.sh  2-install-nvidia-headers.sh  3-build-ff.sh  4-build-mpv.sh  5-harvest-all.sh
src-tauri/: Cargo.toml  build.rs  portable_tauri.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  models.rs
src-tauri/src/commands/: export.rs  metadata.rs  mod.rs
src-tauri/src/ffmpeg/: executor.rs  hwaccel.rs  keyframes.rs  mod.rs  probe.rs
src/app/: app.tsx  index.tsx  root-error-boundary.tsx
src/app/lib/: index.ts  use-prevent-context-menu.ts
src/app/routes/: error-boundary.tsx  router.tsx
src/app/styles/: index.css
src/app/styles/fonts/: index.css
src/entities/config/lib/: hook.ts
src/entities/config/model/: overrides.d.ts  types.ts
src/entities/segments/model/: store.ts  types.ts
src/entities/video/lib/: format.ts  index.ts  player-hooks.ts
src/entities/video/model/: store.ts  types.ts
src/pages/: editor.tsx  import.tsx  index.ts
src/pages/export/: complete.tsx  export.tsx  index.ts  processing.tsx
src/shared/types/: events.ts  react.ts  util.ts
src/shared/ui/: checkbox.tsx  index.ts  popover.tsx  select.tsx  sheet.tsx  slider.tsx  toaster.tsx
src/shared/utils/: debounce.ts  fullscreen.ts  generic.ts  index.ts  invariant.ts  is.ts
src/widgets/editor/: widget.tsx
src/widgets/import-area/: widget.tsx
(+68 files in other folders)
