[package]
name = "tauri-video-cut"
version = "1.0.0"
description = "Fast, lossless video cutting tool built with Tauri, Rust, and Preact"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/constDEFE/tauri-video-cut"
homepage = "https://github.com/constDEFE/tauri-video-cut"
keywords = ["video", "cut", "lossless", "tauri", "windows", "gui"]
categories = ["multimedia::video", "rendering", "gui"]
rust-version = "1.85"

[lib]
name = "tauri_video_cut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
regex = "1.12.3"
log = "0.4"
tauri-plugin-libmpv = "0.3.2"
chrono = "0.4.45"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
